--- a/employee-training-web/src/main/resources/content/Language.properties
+++ b/employee-training-web/src/main/resources/content/Language.properties
@@ -1,1 +1,2 @@
-
+javax.portlet.title.com_aixtor_training_employee_EmployeeComponentPortlet=EmployeeComponent
+employeecomponent.caption=Hello from EmployeeComponent!
